[package]
name = "matrix-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
three-d = { version = "0.19.0", features = ["egui-gui"] }

# If writing unsafe code
# as_ptr_cast_mut = "warn"
# default_union_representation = "warn"
# non_send_fields_in_send_ty = "warn"
# transmute_undefined_repr = "warn"
# undocumented_unsafe_blocks = "warn"
# uninhabited_reference = "warn"

[lints.clippy]
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
branches_sharing_code = "warn"
clone_on_ref_ptr = "warn"
collection_is_never_read = "warn"
derive_partial_eq_without_eq = "warn"
doc_include_without_cfg = "warn"
# Usage should be in restricted scopes
enum_glob_use = "allow"
equatable_if_let = "warn"
error_impl_error = "warn"
fallible_impl_from = "warn"
float_cmp_const = "warn"
if_then_some_else_none = "warn"
imprecise_flops = "warn"
infinite_loop = "warn"
iter_on_single_items = "warn"
large_stack_frames = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_const_for_fn = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
needless_type_cast = "warn"
option_if_let_else = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
# Let custom set lints override this
pedantic = { level = "warn", priority = -1 }
precedence_bits = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
semicolon_inside_block = "warn"
set_contains_or_insert = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
tuple_array_conversions = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_struct_initialization = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_peekable = "warn"
use_self = "warn"

[lints.rust]
unsafe_code = "forbid"
